--- a/pages/articles.html
+++ b/pages/articles.html
@@ -60,7 +60,7 @@
             </p>
         </article>
     </main>
-    <footer class="footer">
+    <footer class="footer hpage-footer">
         &copy; Aleksei Mikhlai
     </footer>
 </body>
