--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -35,7 +35,7 @@
             </figure>
         </div>
     </main>
-    <footer class="footer galery-footer">
+    <footer class="footer hpage-footer">
         &copy; Aleksei Mikhlai
     </footer>
 </body>
