--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
             <li class="navli-item"><a class="hpagelink" href="pages/registration.html">Регистрация</a></li>
         </ul>
     </main>
-    <footer class="footer hpage-footer">
-        &copy; Aleksei Mikhlai
+    <footer class="footer">
+        <div class="hpage-footer">
+            &copy; Aleksei Mikhlai
+        </div>
     </footer>
 </body>
 
