--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -68,7 +68,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer hpage-footer">
         &copy; Aleksei Mikhlai
     </footer>
 </body>
