--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -47,8 +47,8 @@
             <input class="ligh-form" id="userem" type="email" name="email" placeholder="Ваш email">
             <label class="ligh-form" for="quastions"> Задайте Ваш вопрос:</label>
             <textarea id="quastions" name="text" placeholder="Опишите Ваш вопрос..." cols="30" rows="10"></textarea>
-            <button id="sendbtn" type="submit">Отправить</button>
-            <button id="destroybtn" type="reset">Очистить форму</button>
+            <button class="sendbtn" type="submit">Отправить</button>
+            <button class="destroybtn" type="reset">Очистить форму</button>
         </form>
     </main>
     <footer class="footer">
