--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -20,10 +20,10 @@
             <li class="navli"><a href="registration.html">Регистрация</a></li>
         </ul>
     </header>
-    <main class="container">
+    <main class="container gallery-main-container">
         <h1>Галерея</h1>
         <hr>
-        <div class="galery-container">
+        <div class="gallery-container">
             <figure class="figcomponent">
                 <a href="../img/gallery/Places.jpg"><img class="imglink" src="../img/gallery/Places.jpg"
                         alt="Места для пеших прогулок"></a>
