--- a/pages/page-nav.html
+++ b/pages/page-nav.html
@@ -20,9 +20,9 @@
             <li class="navli"><a href="registration.html">Регистрация</a></li>
         </ul>
     </header>
-    <main class="container">
-        <h1 class="page-nav-ptitle" id="top">Навигация</h1>
-        <h4 class="page-nav-title">Навигация по разделам страницы</h4>
+    <main class="container page-nav-container">
+        <h1 id="top">Навигация</h1>
+        <h4>Навигация по разделам страницы</h4>
         <div class="page-nav-list">
             <ul class="page-nav-listself">
                 <li><a href="#sec1">Раздел 1</a></li>
