--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -25,7 +25,7 @@
         <section class="catalogpieces">
             <div class="section">
                 <div class="positionname"><strong>Виды услуг:</strong></div>
-                <ul>
+                <ul class="list-img">
                     <li>Гостиничные номера</li>
                     <li>Ресторан</li>
                     <li>Банный комплекс</li>
@@ -35,7 +35,7 @@
             </div>
             <div class="section">
                 <div class="positionname"><strong>Фильмы в прокате:</strong></div>
-                <ul>
+                <ul class="list-img">
                     <li>King’s Man: Начало</li>
                     <li>Зверопой 2</li>
                     <li>Лакричная пицца</li>
@@ -52,13 +52,13 @@
                         </ul>
                     </li>
                     <li>Велосипеды
-                        <ul>
+                        <ul class="list-img">
                             <li>Классические</li>
                             <li class="newpositionname">На электрической тяге</li>
                         </ul>
                     </li>
                     <li>Другое
-                        <ul>
+                        <ul class="list-img">
                             <li>Электросамокаты</li>
                             <li class="newpositionname">Детские электромобили</li>
                             <li>Гироскутеры</li>
