--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -34,21 +34,38 @@
             <p><strong>Как нас найти</strong></p>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13505.094638143451!2d27.47277507243786!3d53.85782849140368!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbd07998de5cb9%3A0x6ae38cf1079d8e2a!2z0L_RgNC-0YHQv9C10LrRgiDQlNC30LXRgNC20LjQvdGB0LrQvtCz0L4gMTA0LCDQnNC40L3RgdC6IDIyMDA4OQ!5e0!3m2!1sru!2sby!4v1643208162918!5m2!1sru!2sby"
-                width="350" height="250" style="border:0;" allowfullscreen loading="lazy"></iframe>
+                width="100%" height="100%" style="border:0;" allowfullscreen loading="lazy">
+            </iframe>
         </div>
         <p class="contacts-info-paragraphs"><strong>Обратная связь</strong></p>
         <form class="contacts-biplace" action="#">
-            <label class="ligh-form" for="usernc">Ваше имя:</label>
-            <input class="ligh-form" id="usernc" type="text" name="usernamecontacts" placeholder="Ваше имя">
-            <label class="ligh-form" for="telno">Контактный номер телефона:</label>
-            <input class="ligh-form" id="telno" type="tel" name="phone"
-                pattern="375-[0-9]{2}-[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder="375-XX-XXX-XX-XX">
-            <label class="ligh-form" for="userem">Ваш email:</label>
-            <input class="ligh-form" id="userem" type="email" name="email" placeholder="Ваш email">
-            <label class="ligh-form" for="quastions"> Задайте Ваш вопрос:</label>
-            <textarea id="quastions" name="text" placeholder="Опишите Ваш вопрос..." cols="30" rows="10"></textarea>
-            <button class="sendbtn" type="submit">Отправить</button>
-            <button class="destroybtn" type="reset">Очистить форму</button>
+            <fieldset>
+                <legend> Обратная связь</legend>
+                <div class="ligh-form">
+                    <label for="usernc">Ваше имя:</label>
+                    <input class="contacts-form-info" class="registr-form-info" class="ligh-form" id="usernc"
+                        type="text" name="usernamecontacts" placeholder="Ваше имя">
+                </div>
+                <div class="ligh-form">
+                    <label for="telno">Контактный номер телефона:</label>
+                    <input class="contacts-form-info" class="registr-form-info" class="ligh-form" id="telno" type="tel"
+                        name="phone" pattern="375-[0-9]{2}-[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder="375-XX-XXX-XX-XX">
+                </div>
+                <div class="ligh-form">
+                    <label for="userem">Ваш email:</label>
+                    <input class="contacts-form-info" class="registr-form-info" class="ligh-form" id="userem"
+                        type="email" name="email" placeholder="Ваш email">
+                </div>
+                <div class="ligh-form">
+                    <label for="quastions"> Задайте Ваш вопрос:</label>
+                    <textarea id="quastions" name="text" placeholder="Опишите Ваш вопрос..." cols="30"
+                        rows="10"></textarea>
+                </div>
+                <div class="contacts-btn">
+                    <button class="sendbtn" type="submit">Отправить</button>
+                    <button class="destroybtn" type="reset">Очистить форму</button>
+                </div>
+            </fieldset>
         </form>
     </main>
     <footer class="footer">
