--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -23,15 +23,18 @@
     <main class="container gallery-main-container">
         <h1>Галерея</h1>
         <div class="gallery-container">
-            <figure class="figcomponent">
-                <a href="../img/gallery/Places.jpg"><img class="imglink" src="../img/gallery/Places.jpg"
-                        alt="Места для пеших прогулок"></a>
-                <figcaption>Нажми на картинку для просмотра фото</figcaption>
-            </figure>
-            <figure class="figcomponent">
-                <a href="../img/gallery/Burg.jpg"> <img class="imglink" src="../img/gallery/Burg.jpg" alt="Замок"></a>
-                <figcaption>Нажми на картинку для просмотра фото</figcaption>
-            </figure>
+            <a target="blank" href="../img/gallery/Places.jpg">
+                <figure class="figcomponent">
+                    <img class="imglink" src="../img/gallery/Places.jpg" alt="Места для пеших прогулок">
+                    <figcaption>Нажми на картинку для просмотра фото</figcaption>
+                </figure>
+            </a>
+            <a target="blank" href="../img/gallery/Burg.jpg">
+                <figure class="figcomponent">
+                    <img class="imglink" src="../img/gallery/Burg.jpg" alt="Замок">
+                    <figcaption>Нажми на картинку для просмотра фото</figcaption>
+                </figure>
+            </a>
         </div>
     </main>
     <footer class="footer hpage-footer">
