--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -37,33 +37,32 @@
                 width="100%" height="100%" style="border:0;" allowfullscreen loading="lazy">
             </iframe>
         </div>
-        <p class="contacts-info-paragraphs"><strong>Обратная связь</strong></p>
-        <form class="contacts-biplace" action="#">
+        <form class="contacts-biplace" action="#" method="get">
             <fieldset>
-                <legend> Обратная связь</legend>
-                <div class="ligh-form">
-                    <label for="usernc">Ваше имя:</label>
-                    <input class="contacts-form-info" class="registr-form-info" class="ligh-form" id="usernc"
-                        type="text" name="usernamecontacts" placeholder="Ваше имя">
+                <legend class="contacts-info-paragraphs"> Обратная связь</legend>
+                <div class="form-group">
+                    <label>Ваше имя:
+                        <input type="text" name="usernamecontacts" placeholder="Ваше имя"></label>
                 </div>
-                <div class="ligh-form">
-                    <label for="telno">Контактный номер телефона:</label>
-                    <input class="contacts-form-info" class="registr-form-info" class="ligh-form" id="telno" type="tel"
-                        name="phone" pattern="375-[0-9]{2}-[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder="375-XX-XXX-XX-XX">
+                <div class="form-group">
+                    <label>Контактный номер телефона:
+                        <input type="tel" name="phone" pattern="375-[0-9]{2}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                            placeholder="375-XX-XXX-XX-XX"></label>
                 </div>
-                <div class="ligh-form">
-                    <label for="userem">Ваш email:</label>
-                    <input class="contacts-form-info" class="registr-form-info" class="ligh-form" id="userem"
-                        type="email" name="email" placeholder="Ваш email">
+                <div class="form-group">
+                    <label>Ваш email:
+                        <input type="email" name="email" placeholder="Ваш email"></label>
                 </div>
-                <div class="ligh-form">
-                    <label for="quastions"> Задайте Ваш вопрос:</label>
-                    <textarea id="quastions" name="text" placeholder="Опишите Ваш вопрос..." cols="30"
-                        rows="10"></textarea>
+                <div class="form-group">
+                    <label> Задайте Ваш вопрос:
+                        <textarea name="text" placeholder="Опишите Ваш вопрос..." cols="30"
+                            rows="10"></textarea></label>
                 </div>
-                <div class="contacts-btn">
-                    <button class="sendbtn" type="submit">Отправить</button>
-                    <button class="destroybtn" type="reset">Очистить форму</button>
+                <div class="form-group">
+                    <input class="btn" type="submit" value="Отправить">
+                </div>
+                <div class="form-group">
+                    <input class="btn" type="reset" value="Очистить форму">
                 </div>
             </fieldset>
         </form>
