--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -23,12 +23,12 @@
     <main class="container contactpagecontainer">
         <h1>Контакты</h1>
         <div class="contacts-info">
-            <p class="contacts-info-paragraphs"> г. Минск <br>
+            <p> г. Минск <br>
                 проспект Дзержинского, 104 <br>
                 первый этаж, офис 105 <br>
             </p>
-            <p class="contacts-info-paragraphs"><strong>Время работы</strong></p>
-            <p class="contacts-info-paragraphs">Пн.-пт.: 08:00 - 16:30</p>
+            <p><strong>Время работы</strong></p>
+            <p>Пн.-пт.: 08:00 - 16:30</p>
         </div>
         <div class="contacts-map">
             <p><strong>Как нас найти</strong></p>
@@ -37,9 +37,9 @@
                 width="100%" height="100%" style="border:0;" allowfullscreen loading="lazy">
             </iframe>
         </div>
-        <form class="contacts-biplace" action="#" method="get">
+        <form action="#" method="get">
             <fieldset>
-                <legend class="contacts-info-paragraphs"> Обратная связь</legend>
+                <legend> Обратная связь</legend>
                 <div class="form-group">
                     <label>Ваше имя:
                         <input type="text" name="usernamecontacts" placeholder="Ваше имя"></label>
@@ -47,7 +47,7 @@
                 <div class="form-group">
                     <label>Контактный номер телефона:
                         <input type="tel" name="phone" pattern="375-[0-9]{2}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
-                            placeholder="375-XX-XXX-XX-XX"></label>
+                            placeholder="375-XX-XXX-XX-XX" minlength="16" maxlength="16"></label>
                 </div>
                 <div class="form-group">
                     <label>Ваш email:
