--- a/pages/registration.html
+++ b/pages/registration.html
@@ -54,8 +54,8 @@
             <fieldset>
                 <legend>#4 Открывающийся список</legend>
                 <div class="form-group">
-                    <label for="birthyear">Год вашего рождения</label>
-                    <select name="sel" id="birthyear" multiple size="14">
+                    <label>Год вашего рождения</label>
+                    <select name="sel" multiple size="14">
                         <option selected disabled value="">Выберите год</option>
                         <option value="2004">2004</option>
                         <option value="2005">2005</option>
@@ -80,34 +80,34 @@
             </fieldset>
             <fieldset>
                 <legend>#2 Выбор пола</legend>
-                <div class="form-group-sm">
+                <div class="form-group">
                     <input checked type="radio" id="genmale" name="gender" value="male"><label
                         for="genmale">Мужской</label>
                 </div>
-                <div class="form-group-sm">
+                <div class="form-group">
                     <input type="radio" id="genfemale" name="gender" value="female"><label
                         for="genfemale">Женский</label>
                 </div>
             </fieldset>
             <fieldset>
                 <legend>#3 Выберите предрочитаемую кухню</legend>
-                <div class="form-group-sm">
+                <div class="form-group">
                     <input type="checkbox" id="by" name="kit" value="by">
                     <label for="by">Белорусская</label>
                 </div>
-                <div class="form-group-sm">
+                <div class="form-group">
                     <input type="checkbox" id="it" name="kit" value="it">
                     <label for="it">Итальянская</label>
                 </div>
-                <div class="form-group-sm">
+                <div class="form-group">
                     <input type="checkbox" id="es" name="kit" value="es">
                     <label for="es">Испанская</label>
                 </div>
-                <div class="form-group-sm">
+                <div class="form-group">
                     <input type="checkbox" id="fr" name="kit" value="fr">
                     <label for="fr">Французская</label>
                 </div>
-                <div class="form-group-sm">
+                <div class="form-group">
                     <input type="checkbox" id="gr" name="kit" value="gr">
                     <label for="gr">Грузинская</label>
                 </div>
