--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -9,7 +9,7 @@
     <title>Contacts</title>
 </head>
 
-<body class="bodypicture">
+<body>
     <header class="header-navbar">
         <ul>
             <li class="navli"><a href="../index.html">Главная</a></li>
@@ -29,8 +29,6 @@
             </p>
             <p><strong>Время работы</strong></p>
             <p>Пн.-пт.: 08:00 - 16:30</p>
-        </div>
-        <div class="contacts-map">
             <p><strong>Как нас найти</strong></p>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13505.094638143451!2d27.47277507243786!3d53.85782849140368!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbd07998de5cb9%3A0x6ae38cf1079d8e2a!2z0L_RgNC-0YHQv9C10LrRgiDQlNC30LXRgNC20LjQvdGB0LrQvtCz0L4gMTA0LCDQnNC40L3RgdC6IDIyMDA4OQ!5e0!3m2!1sru!2sby!4v1643208162918!5m2!1sru!2sby"
