--- a/pages/page-nav.html
+++ b/pages/page-nav.html
@@ -9,7 +9,7 @@
     <title>Nav</title>
 </head>
 
-<body class="bodypicture">
+<body>
     <header class="header-navbar">
         <ul>
             <li class="navli"><a href="../index.html">Главная</a></li>
