fix: change sixe of forms,change styles

--- a/pages/articles.html
+++ b/pages/articles.html
@@ -9,7 +9,7 @@
     <title>Articles</title>
 </head>
 
-<body class="body-norepbgi">
+<body>
     <header class="header-navbar">
         <ul>
             <li class="navli"><a href="../index.html">Главная</a></li>
@@ -20,7 +20,7 @@
             <li class="navli"><a href="registration.html">Регистрация</a></li>
         </ul>
     </header>
-    <main class="container">
+    <main>
         <h1>Статьи</h1>
         <article>
             <h2><a class="artpagelink" href="articles/articleone.html"> Налетай, подешевело — 2: «проходные» авто из
@@ -60,7 +60,7 @@
             </p>
         </article>
     </main>
-    <footer class="footer hpage-footer">
+    <footer class="footer">
         &copy; Aleksei Mikhlai
     </footer>
 </body>
