--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -9,8 +9,8 @@
     <title>Catalog</title>
 </head>
 
-<body class="body-norepbgi">
-    <header class=" header-navbar">
+<body>
+    <header class="header-navbar">
         <ul>
             <li class="navli"><a href="../index.html">Главная</a></li>
             <li class="navli"><a href="articles.html">Статьи</a></li>
@@ -20,10 +20,10 @@
             <li class="navli"><a href="registration.html">Регистрация</a></li>
         </ul>
     </header>
-    <main class="container">
+    <main>
         <h1>Каталог</h1>
         <section class="catalogpieces">
-            <div class="section">
+            <div class="catalog-section">
                 <div class="positionname"><strong>Виды услуг:</strong></div>
                 <ul class="list-img">
                     <li>Гостиничные номера</li>
@@ -33,7 +33,7 @@
                     <li>Кинозал</li>
                 </ul>
             </div>
-            <div class="section">
+            <div class="catalog-section">
                 <div class="positionname"><strong>Фильмы в прокате:</strong></div>
                 <ul class="list-img">
                     <li>King’s Man: Начало</li>
@@ -41,7 +41,7 @@
                     <li>Лакричная пицца</li>
                 </ul>
             </div>
-            <div class="section">
+            <div class="catalog-section">
                 <div class="positionname"><strong>Техника в аренду:</strong></div>
                 <ul>
                     <li>Автомобили
