--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -20,7 +20,7 @@
             <li class="navli"><a href="registration.html">Регистрация</a></li>
         </ul>
     </header>
-    <main class="container gallery-main-container">
+    <main class="gallery-main">
         <h1>Галерея</h1>
         <div class="gallery-container">
             <a target="blank" href="../img/gallery/Places.jpg">
@@ -37,7 +37,7 @@
             </a>
         </div>
     </main>
-    <footer class="footer hpage-footer">
+    <footer>
         &copy; Aleksei Mikhlai
     </footer>
 </body>
