--- a/pages/page-nav.html
+++ b/pages/page-nav.html
@@ -20,7 +20,7 @@
             <li class="navli"><a href="registration.html">Регистрация</a></li>
         </ul>
     </header>
-    <main class="container page-nav-container">
+    <main class="page-nav-container">
         <h1 id="top">Навигация</h1>
         <h4>Навигация по разделам страницы</h4>
         <div class="page-nav-list">
