--- a/pages/registration.html
+++ b/pages/registration.html
@@ -20,40 +20,40 @@
             <li class="navli"><a href="page-nav.html">Навигация</a></li>
         </ul>
     </header>
-    <main class="container registr-container">
+    <main class="registr-container">
         <h1>Регистрация:</h1>
         <form action="#" method="get" enctype="multipart/form-data">
             <fieldset>
                 <legend>#1 Базовые поля</legend>
-                <div class="form-group">
+                <div>
                     <label>Логин:
                         <input type="text" name="username" placeholder="Логин" minlength="3" maxlength="10"
                             value="Alexei"></label>
                 </div>
-                <div class="form-group">
+                <div>
                     <label>Пароль:
                         <input type="password" name="password" minlength="3" maxlength="10"
                             placeholder="Введите пароль"></label>
                 </div>
-                <div class="form-group"><label>Дата Вашего рождения:
+                <div><label>Дата Вашего рождения:
                         <input type="date" name="birthday"></label>
                 </div>
-                <div class="form-group">
+                <div>
                     <label>Ваше фото
                         <input type="file" name="foto"></label>
                 </div>
-                <div class="form-group">
+                <div>
                     <label>Ваша электронная почта:
                         <input type="email" name="useremail" placeholder="Имейл"></label>
                 </div>
-                <div class="form-group">
+                <div>
                     <label>Введите название сайта:
                         <input type="text" name="webpage" placeholder="Введите название сайта"></label>
                 </div>
             </fieldset>
             <fieldset>
                 <legend>#4 Открывающийся список</legend>
-                <div class="form-group">
+                <div>
                     <label>Год вашего рождения</label>
                     <select name="sel" multiple size="14">
                         <option selected disabled value="">Выберите год</option>
@@ -80,41 +80,41 @@
             </fieldset>
             <fieldset>
                 <legend>#2 Выбор пола</legend>
-                <div class="form-group">
+                <div>
                     <input checked type="radio" id="genmale" name="gender" value="male"><label
                         for="genmale">Мужской</label>
                 </div>
-                <div class="form-group">
+                <div>
                     <input type="radio" id="genfemale" name="gender" value="female"><label
                         for="genfemale">Женский</label>
                 </div>
             </fieldset>
             <fieldset>
                 <legend>#3 Выберите предрочитаемую кухню</legend>
-                <div class="form-group">
+                <div>
                     <input type="checkbox" id="by" name="kit" value="by">
                     <label for="by">Белорусская</label>
                 </div>
-                <div class="form-group">
+                <div>
                     <input type="checkbox" id="it" name="kit" value="it">
                     <label for="it">Итальянская</label>
                 </div>
-                <div class="form-group">
+                <div>
                     <input type="checkbox" id="es" name="kit" value="es">
                     <label for="es">Испанская</label>
                 </div>
-                <div class="form-group">
+                <div>
                     <input type="checkbox" id="fr" name="kit" value="fr">
                     <label for="fr">Французская</label>
                 </div>
-                <div class="form-group">
+                <div>
                     <input type="checkbox" id="gr" name="kit" value="gr">
                     <label for="gr">Грузинская</label>
                 </div>
             </fieldset>
             <fieldset>
                 <legend>#4 О себе в произвольной форме</legend>
-                <div class="form-group">
+                <div>
                     <label for="yourself">Напишите о себе:</label>
                     <textarea name="yourabout" id="yourself" cols="30" rows="10"
                         placeholder="Расскажите о себе..."></textarea>
@@ -122,10 +122,10 @@
             </fieldset>
             <fieldset>
                 <legend>#5 Кнопки управления формой</legend>
-                <div class="form-group">
+                <div>
                     <input class="btn" type="submit" value="Отправить">
                 </div>
-                <div class="form-group">
+                <div>
                     <input class="btn" type="reset" value="Очистить форму">
                 </div>
             </fieldset>
