--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 
-<body class="body-norepbgi">
+<body>
     <header class="header-navbar">
         <ul>
             <li class="navli"><a href="pages/articles.html">Статьи</a></li>
@@ -20,7 +20,7 @@
             <li class="navli"><a href="pages/registration.html">Регистрация</a></li>
         </ul>
     </header>
-    <main class="container">
+    <main>
         <ul class="headpage-list">
             <li class="navli-item"><a class="hpagelink" href="pages/articles.html">Статьи</a></li>
             <li class="navli-item"><a class="hpagelink" href="pages/catalog.html">Каталог</a></li>
