--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -20,7 +20,7 @@
             <li class="navli"><a href="registration.html">Регистрация</a></li>
         </ul>
     </header>
-    <main class="container contactpagecontainer">
+    <main class="contactpagecontainer">
         <h1>Контакты</h1>
         <div class="contacts-info">
             <p> г. Минск <br>
@@ -38,28 +38,28 @@
         <form action="#" method="get">
             <fieldset>
                 <legend> Обратная связь</legend>
-                <div class="form-group">
+                <div>
                     <label>Ваше имя:
                         <input type="text" name="usernamecontacts" placeholder="Ваше имя"></label>
                 </div>
-                <div class="form-group">
+                <div>
                     <label>Контактный номер телефона:
                         <input type="tel" name="phone" pattern="375-[0-9]{2}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                             placeholder="375-XX-XXX-XX-XX" minlength="16" maxlength="16"></label>
                 </div>
-                <div class="form-group">
+                <div>
                     <label>Ваш email:
                         <input type="email" name="email" placeholder="Ваш email"></label>
                 </div>
-                <div class="form-group">
+                <div>
                     <label> Задайте Ваш вопрос:
                         <textarea name="text" placeholder="Опишите Ваш вопрос..." cols="30"
                             rows="10"></textarea></label>
                 </div>
-                <div class="form-group">
+                <div>
                     <input class="btn" type="submit" value="Отправить">
                 </div>
-                <div class="form-group">
+                <div>
                     <input class="btn" type="reset" value="Очистить форму">
                 </div>
             </fieldset>
