--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <h1>Каталог</h1>
-        <section class="catalogpieces">
+        <div class="catalogpieces">
             <div class="catalog-section">
                 <div class="positionname"><strong>Виды услуг:</strong></div>
                 <ul class="list-img">
@@ -66,7 +66,7 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </div>
     </main>
     <footer class="footer hpage-footer">
         &copy; Aleksei Mikhlai
